{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 12,
  "lineage": "9848aebf-e044-d0e0-76ae-3ceede93a2f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:265544358105:internet-gateway/igw-09f1208d08109d92f",
            "id": "igw-09f1208d08109d92f",
            "owner_id": "265544358105",
            "tags": {
              "Name": "idp-igw"
            },
            "tags_all": {
              "Name": "idp-igw"
            },
            "vpc_id": "vpc-079ac69f18e81a270"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:265544358105:route-table/rtb-0e2a0e5e4c52e86a2",
            "id": "rtb-0e2a0e5e4c52e86a2",
            "owner_id": "265544358105",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f1208d08109d92f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "idp-public-rt"
            },
            "tags_all": {
              "Name": "idp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-079ac69f18e81a270"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d2bbc4c56faef5c",
            "route_table_id": "rtb-0e2a0e5e4c52e86a2",
            "subnet_id": "subnet-0609ff3cbcf3bf998"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:265544358105:security-group/sg-0962db218b3fde2c1",
            "description": "Security group for k3s node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0962db218b3fde2c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes API",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "idp-k3s-sg",
            "name_prefix": "",
            "owner_id": "265544358105",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "idp-k3s-sg"
            },
            "tags_all": {
              "Name": "idp-k3s-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-079ac69f18e81a270"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:265544358105:subnet/subnet-0609ff3cbcf3bf998",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0609ff3cbcf3bf998",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "265544358105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "idp-public-subnet"
            },
            "tags_all": {
              "Name": "idp-public-subnet"
            },
            "vpc_id": "vpc-079ac69f18e81a270"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:265544358105:vpc/vpc-079ac69f18e81a270",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-075becac94a2fb072",
            "default_route_table_id": "rtb-0d37286daed364863",
            "default_security_group_id": "sg-0f0e3cb3401ae1b1c",
            "dhcp_options_id": "dopt-014c794cd47093c47",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079ac69f18e81a270",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d37286daed364863",
            "owner_id": "265544358105",
            "tags": {
              "Name": "idp-vpc"
            },
            "tags_all": {
              "Name": "idp-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}